# SectorScope

./: .gitignore  COPYING  Makefile  Makefile.am  README.md  bootstrap.sh  build_installer.nsi  configure.ac
SectorScope_autopsy_plugin/nbproject/: build-impl.xml  platform.properties
autopsy_plugin/: README.md  build.xml  manifest.mf
autopsy_plugin/nbm/: SectorScope.nbm
autopsy_plugin/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
doc/: design_notes.md
doc/SectorScope_um/: Makefile  SectorScope_um.tex  title.tex
doc/announce/: announce_0.7.0.md  announce_0.7.1.md
doc/block_match_viewer_um/: Makefile  block_match_viewer_um.tex  title.tex
doc/sectorscope_um/: Makefile  sectorscope_um.tex
doc/viewer_um/: Makefile  viewer_um.tex
install/: Makefile  README.md  build_installer.nsi
m4/: sectorscope_cflags.m4
python/: SectorScope.py  annotation_filter.py  annotation_reader.py  annotation_view.py  annotation_window.py  auto_scrollbar.py  bar_scale.py  bar_scale_view.py  be_image_reader.py  be_import.py  be_import_gui.py  be_import_window.py  be_scan.py  be_scan_gui.py  be_scan_window.py  block_match_viewer.py  block_match_viewer_v001.py  block_viewer.py  colors.py  command_runner.py  compatible_popen.py  control_view.py  data_manager.py  data_preferences.py  data_reader.py  error_window.py  filter_changer.py  filter_view.py  filters.py  filters_view.py  fit_range_selection.py  forensic_path.py  hash_histogram_bar.py  hash_zoom_bar.py  helpers.py  highlights.py  highlights_summary_view.py  histogram_annotations.py  histogram_bar.py  histogram_constants.py  (+52 more)
src/: Makefile.am  json_scan_reader.hpp  test.cpp
src_win/: Makefile  README  build_installer.nsi
(+28 files in other folders)
